<resources>
    <string name="app_name">CUP Monitor</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pool_preferences">poolpreferences</string>

    <string name="eng_mypool">My Pool:</string>
    <string name="eng_hashrate">Hash Rate:</string>
    <string name="eng_blockfound">Last Block Found:</string>
    <string name="eng_totblocks">Total Blocks:</string>
    <string name="eng_numminers">Number of Miners:</string>
    <string name="eng_donations">Donations:</string>
    <string name="eng_poolfee">Total Pool Fees:</string>

    <string name="eng_mystats">My Stats:</string>
    <string name="eng_pendbal">Pending Balance:</string>
    <string name="eng_totpaid">Total Paid:</string>
    <string name="eng_lastshare">Last Share:</string>
    <string name="eng_totshares">Total Shares:</string>

    <string name="eng_netstats">Network Stats:</string>
    <string name="eng_diff">Difficulty:</string>
    <string name="eng_blockheight">Block Chain Height:</string>
    <string name="eng_lastreward">Last Reward:</string>

    <string name="eng_settings">App Settings:</string>
    <string name="eng_pooladdr">Pool URL:</string>
    <string name="eng_poolport">Pool API Port:</string>
    <string name="defaultport">8117</string>
    <string name="eng_walletaddr">Wallet Address:</string>
    <string name="eng_refreshrate">Refresh Rate:</string>
    <string name="eng_invalidwallet">Invalid wallet specified.</string>
    <string name="eng_enablenotifications">Enable Notifications:</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Dependencies cannot be downloaded due to low device storage</string>
</resources>
