<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/eng_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/txt_pooladdr_header"
        android:text="@string/eng_pooladdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_pooladdr" />

    <TextView
        android:id="@+id/txt_poolport_header"
        android:text="@string/eng_poolport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="8117"
        android:ems="10"
        android:id="@+id/edit_poolport" />

</LinearLayout>