<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:text="@string/eng_netstats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_pool_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_hashrate_header"
            android:text="@string/eng_hashrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/txt_hashrate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_blockfound_header"
            android:text="@string/eng_blockfound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/txt_blockfound_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_diff_header"
            android:text="@string/eng_diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/txt_diff_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_blockheight_header"
            android:text="@string/eng_blockheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/txt_blockheight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_lastreward_header"
            android:text="@string/eng_lastreward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/txt_lastreward_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />
    </RelativeLayout>
</LinearLayout>